QHash: centralize the span allocation

Deduplicates code and will allow me to insert some magic.

Task-number: QTBUG-113335
Change-Id: Ieab617d69f3b4b54ab30fffd175bb4a2af610ff8
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 1acbcc318ad536ab25ffde3f7c786a3c0706311f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>